- docu finalized - tests improved (using proxy-client)